tests/type_errors/addition_is_restricted.sy
-- This test isn't valid anymore?
mod A

type A = foreign

def x
: A -> A
: a = a + a

